--- a/product-service/package.json
+++ b/product-service/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "source-map-support": "^0.5.10"
+    "source-map-support": "^0.5.10",
+    "pg": "^8.4.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
