--- a/import-service/package.json
+++ b/import-service/package.json
@@ -18,6 +18,7 @@
     "@types/serverless": "^1.72.5",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-webpack": "^5.2.0",
+    "serverless-dotenv-plugin": "^3.1.0",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.2.4",
